tests/disabled-cases/typecheck/structs/malformed-field-types.hash
// run=fail


Foo := struct(bar: Type)
